# pqc-messenger

./: .env.example  .gitignore  README.md  build.py  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Dockerfile.base  README.md  __init__.py  build-base.ps1  build-base.sh  build_base.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  auth.py  auth_models.py  config.py  database.py  db_models.py  keys.py  main.py  messages.py  models.py  repositories.py  storage.py
backend/app/crypto/: __init__.py  jwt.py  password.py  pqc.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_login.py  test_cors.py  test_healthz.py  test_keys.py  test_messages.py  test_pqc.py
docs/: open_source_guide.md
frontend/: README.md  pubspec.yaml
frontend/lib/: app_state.dart  main.dart
frontend/lib/screens/: dashboard_screen.dart  key_confirmation_screen.dart  login_screen.dart  message_send_screen.dart  onboarding_screen.dart  registration_screen.dart
frontend/lib/services/: api_client.dart  dilithium_service.dart
frontend/lib/utils/: base_url_helper.dart
frontend/test/: base_url_helper_test.dart  login_screen_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
plans/: Phase 3.md  phase 1.md  phase 2.md  phase 4.md  phase 5.md  phase 6.md  phase1-completion.md  plan.md  prd.md
